--- a/notebooks/shape_classifier.ipynb
+++ b/notebooks/shape_classifier.ipynb
@@ -39,7 +39,9 @@
     "import os\n",
     "\n",
     "# Set device\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "# device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")  #! modified to work with MPS\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \\\n",
+    "    \"mps\" if torch.backends.mps.is_built() else \"cpu\")\n",
     "\n",
     "# Define transformations (including resizing and normalization)\n",
     "transform = transforms.Compose([\n",
@@ -64,7 +66,8 @@
     "    def __init__(self):\n",
     "        super(SimpleCNN, self).__init__()\n",
     "        self.conv1 = nn.Conv2d(1, 16, kernel_size=3, padding=1)\n",
-    "        self.conv2 = nn.Conv2d(32, 32, kernel_size=3, padding=1)\n",
+    "        # self.conv2 = nn.Conv2d(32, 32, kernel_size=3, padding=1)\n",
+    "        self.conv2 = nn.Conv2d(16, 32, kernel_size=3, padding=1)  #! changes \n",
     "        self.fc1 = nn.Linear(32 * 16 * 16, 128)\n",
     "        self.fc2 = nn.Linear(128, 3)  # 3 classes: circle, triangle, rectangle\n",
     "        \n",
@@ -108,7 +111,7 @@
     "            total += labels.size(0)\n",
     "            correct += (predicted == labels).sum().item()\n",
     "        \n",
-    "        accuracy = 0 * correct / total\n",
+    "        accuracy = 100.0 * correct / total  #! changes\n",
     "        print(f'Epoch [{epoch+1}/{epochs}], Loss: {running_loss/len(train_loader):.4f}, Accuracy: {accuracy:.2f}%')\n"
    ]
   },
@@ -176,7 +179,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "silverpond",
    "language": "python",
    "name": "python3"
   },
@@ -190,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
