--- a/notebooks/shape_classifier.ipynb
+++ b/notebooks/shape_classifier.ipynb
@@ -64,7 +64,7 @@
     "    def __init__(self):\n",
     "        super(SimpleCNN, self).__init__()\n",
     "        self.conv1 = nn.Conv2d(1, 16, kernel_size=3, padding=1)\n",
-    "        self.conv2 = nn.Conv2d(32, 32, kernel_size=3, padding=1)\n",
+    "        self.conv2 = nn.Conv2d(16, 32, kernel_size=3, padding=1)\n",
     "        self.fc1 = nn.Linear(32 * 16 * 16, 128)\n",
     "        self.fc2 = nn.Linear(128, 3)  # 3 classes: circle, triangle, rectangle\n",
     "        \n",
@@ -108,7 +108,7 @@
     "            total += labels.size(0)\n",
     "            correct += (predicted == labels).sum().item()\n",
     "        \n",
-    "        accuracy = 0 * correct / total\n",
+    "        accuracy = 100 * correct / total\n",
     "        print(f'Epoch [{epoch+1}/{epochs}], Loss: {running_loss/len(train_loader):.4f}, Accuracy: {accuracy:.2f}%')\n"
    ]
   },
@@ -145,15 +145,87 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def test(model, test_loader):\n",
-    "    \"\"\"Print the Precision, Recall and F1-score for the trained model\n",
-    "    \"\"\"\n",
-    "    pass"
+    "# def test(model, test_loader):\n",
+    "#     \"\"\"Print the Precision, Recall and F1-score for the trained model\n",
+    "#     \"\"\"\n",
+    "#     pass\n",
+    "\n",
+    "from typing_extensions import Annotated, Doc\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "def test(model: Annotated[torch.nn.Module, Doc(\"Model want to be tested\")],\n",
+    "         test_loader: Annotated[torch.utils.data.DataLoader, Doc(\"test data loader\")]) -> dict:\n",
+    "     \"\"\"Evaluate model performance and return classification metrics\n",
+    "\n",
+    "     Args:\n",
+    "         model (Annotated[torch.nn.Module, Doc): Trained Pytorch model\n",
+    "         test_loader (Annotated[torch.utils.data.DataLoader, Doc): DataLoader (test set)\n",
+    "\n",
+    "     Returns:\n",
+    "         dict: classification metrics\n",
+    "     \"\"\"\n",
+    "    \n",
+    "     # switch model to evaluation mode\n",
+    "     model.eval()\n",
+    "\n",
+    "     # set device\n",
+    "     device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "     # create a empty lists to store the results\n",
+    "     predictions = []\n",
+    "     true_labels = []\n",
+    "\n",
+    "     for images, labels in test_loader:\n",
+    "          images = images.to(device)\n",
+    "          \n",
+    "          #run the image through model to get predictions\n",
+    "          outputs = model(images)\n",
+    "          \n",
+    "          #get the highest prob prediction for each image\n",
+    "          _, predicted = torch.max(outputs, 1)\n",
+    "          \n",
+    "          #add to list of predictions\n",
+    "          predictions.extend(predicted.numpy())\n",
+    "          \n",
+    "          #add to list of labels\n",
+    "          true_labels.extend(labels.numpy())\n",
+    "          \n",
+    "     report = classification_report(\n",
+    "     true_labels,\n",
+    "     predictions,\n",
+    "     target_names=test_loader.dataset.classes,    #use actual class names ('circle', 'diamond', 'triangle')\n",
+    "     output_dict=True\n",
+    "     )\n",
+    "\n",
+    "     for class_name in test_loader.dataset.classes:\n",
+    "          metric = report[class_name]\n",
+    "          print(f\"{class_name}\")\n",
+    "          \n",
+    "          #Precision\n",
+    "          print(f\"Precision: {metric['precision']:.4f}\")\n",
+    "          \n",
+    "          #Recall\n",
+    "          print(f\"Recall: {metric['recall']:.4f}\")\n",
+    "          \n",
+    "          #F1-score:\n",
+    "          print(f\"F1-score: {metric['f1-score']:.4f}\")\n",
+    "          \n",
+    "     return report "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(test(model, test_loader))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "source": [
     "# Show Predictions\n"
@@ -162,21 +234,106 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def show_prediction(model, image):\n",
-    "    \"\"\"Pass the image to the model and overlay the predicted shape and confidence on the input\n",
-    "    image and display it\n",
+    "# def show_prediction(model, image):\n",
+    "#     \"\"\"Pass the image to the model and overlay the predicted shape and confidence on the input\n",
+    "#     image and display it\n",
+    "#     \"\"\"\n",
+    "#     pass\n",
+    "from PIL import Image\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "\n",
+    "def show_prediction(model: Annotated[torch.nn.Module, Doc(\"Model want to try predicting\")],\n",
+    "                    image: Annotated[Image.Image, Doc(\"Input image or path to image\")]) -> None:\n",
+    "    \"\"\"Predict class for an image and display results\n",
+    "\n",
+    "    Args:\n",
+    "        model (Annotated[torch.nn.Module, Doc): Trained Pytorch model\n",
+    "        image (Annotated[Image.Image, Doc): input image to test\n",
     "    \"\"\"\n",
-    "    pass"
+    "    # if path, need to help open image\n",
+    "    if isinstance(image, str):\n",
+    "        image = Image.open(image)\n",
+    "    \n",
+    "    #set to eval mode\n",
+    "    model.eval()\n",
+    "    \n",
+    "    # set device\n",
+    "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "    \n",
+    "    #save original image\n",
+    "    original_image = image.copy()\n",
+    "    \n",
+    "    #transformation \n",
+    "    transform = transforms.Compose([\n",
+    "    transforms.Grayscale(num_output_channels=1),  # Convert to grayscale (black and white images)\n",
+    "    transforms.Resize((64, 64)),  # Resize images to 64x64 pixels\n",
+    "    transforms.ToTensor(),  # Convert the image to a tensor\n",
+    "    transforms.Normalize((0.5,), (0.5,))  # Normalize the images (mean=0.5, std=0.5 for grayscale)\n",
+    "])\n",
+    "    \n",
+    "    #process image and add batch dimension\n",
+    "    image_tensor = transform(image).unsqueeze(0).to(device)\n",
+    "    \n",
+    "    # run image\n",
+    "    outputs = model(image_tensor)\n",
+    "    \n",
+    "    #convert raw output to prob (0-1)\n",
+    "    probs = F.softmax(outputs, dim=1)\n",
+    "    \n",
+    "    # get the confidence and predicted\n",
+    "    confidence, predicted = torch.max(probs, 1)\n",
+    "    \n",
+    "    # convert confidence to normal number\n",
+    "    confidence_score = confidence.item()\n",
+    "    \n",
+    "    # get the number of possible shapes from models\n",
+    "    class_names = model.fc2.out_features\n",
+    "    \n",
+    "    # create a label \n",
+    "    class_name = f\"Shape {predicted.item()}\"    # circle: shape 0, diamond: shape 1, triangle: shape 2\n",
+    "    \n",
+    "    \n",
+    "    # create a display \n",
+    "    plt.figure(figsize=(8,8))\n",
+    "    \n",
+    "    #show image\n",
+    "    plt.imshow(original_image)\n",
+    "    \n",
+    "    #add title\n",
+    "    plt.title(f\"Predict: {class_name}\\nConfidence: {confidence_score:.1%}\", fontsize=14, pad=20)\n",
+    "    \n",
+    "    plt.show()\n",
+    "    \n",
+    "    \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show_prediction(model, \"images.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "silverpond_env",
    "language": "python",
    "name": "python3"
   },
@@ -190,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
