--- a/notebooks/shape_classifier.ipynb
+++ b/notebooks/shape_classifier.ipynb
@@ -64,7 +64,7 @@
     "    def __init__(self):\n",
     "        super(SimpleCNN, self).__init__()\n",
     "        self.conv1 = nn.Conv2d(1, 16, kernel_size=3, padding=1)\n",
-    "        self.conv2 = nn.Conv2d(32, 32, kernel_size=3, padding=1)\n",
+    "        self.conv2 = nn.Conv2d(16, 32, kernel_size=3, padding=1)\n",
     "        self.fc1 = nn.Linear(32 * 16 * 16, 128)\n",
     "        self.fc2 = nn.Linear(128, 3)  # 3 classes: circle, triangle, rectangle\n",
     "        \n",
@@ -108,7 +108,7 @@
     "            total += labels.size(0)\n",
     "            correct += (predicted == labels).sum().item()\n",
     "        \n",
-    "        accuracy = 0 * correct / total\n",
+    "        accuracy = 100 * correct / total\n",
     "        print(f'Epoch [{epoch+1}/{epochs}], Loss: {running_loss/len(train_loader):.4f}, Accuracy: {accuracy:.2f}%')\n"
    ]
   },
@@ -148,21 +148,267 @@
     "def test(model, test_loader):\n",
     "    \"\"\"Print the Precision, Recall and F1-score for the trained model\n",
     "    \"\"\"\n",
-    "    pass"
+    "\n",
+    "    y_predicted = []\n",
+    "    y_true = []\n",
+    "    \n",
+    "    model.eval() # Don't change the model weights from this point\n",
+    "\n",
+    "    # For all images in the evaluation data:\n",
+    "    for batch, (images, labels) in enumerate(test_loader):\n",
+    "        images, labels = images.to(device), labels.to(device)\n",
+    "\n",
+    "        # Get predicted labels for the images (y pred)\n",
+    "        outputs = model(images) # Get raw predictions\n",
+    "        _, predictions = torch.max(outputs,1)\n",
+    "\n",
+    "        # Add the real labels and predicted labels to two lists\n",
+    "        y_predicted.extend( predictions.cpu().numpy() )\n",
+    "        y_true.extend( labels.cpu().numpy() )\n",
+    "\n",
+    "    # Convert the lists of predicted and true labels to tensors\n",
+    "    y_pred_tensor = torch.tensor(y_predicted)\n",
+    "    y_true_tensor = torch.tensor(y_true)\n",
+    "    \n",
+    "    # Calculate precision, recall, and F1 score\n",
+    "    # SOURCE: GeeksForGeeks https://www.geeksforgeeks.org/how-to-calculate-the-f1-score-and-other-custom-metrics-in-pytorch/\n",
+    "    TP = ((y_pred_tensor == 1) & (y_true_tensor == 1)).sum().item()\n",
+    "    FP = ((y_pred_tensor == 1) & (y_true_tensor == 0)).sum().item()\n",
+    "    FN = ((y_pred_tensor == 0) & (y_true_tensor == 1)).sum().item()\n",
+    "\n",
+    "    precision = TP / (TP + FP) if TP + FP > 0 else 0\n",
+    "    recall = TP / (TP + FN) if TP + FN > 0 else 0\n",
+    "    f1 = 2 * (precision * recall) / (precision + recall) if (precision + recall) > 0 else 0\n",
+    "\n",
+    "    print(f'Precision: {precision}')\n",
+    "    print(f'Recall: {recall}')\n",
+    "    print(f'F1 Score: {f1}')\n",
+    "\n",
+    "    return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test(model, test_loader)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "source": [
     "# Show Predictions\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9",
+   "metadata": {},
+   "source": [
+    "### Load image"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image\n",
+    "\n",
+    "# Source: https://www.geeksforgeeks.org/converting-an-image-to-a-torch-tensor-in-python/\n",
+    "import torchvision.transforms as transforms\n",
+    "\n",
+    "def load_image(path):\n",
+    "    img = Image.open(path)\n",
+    "    img = transform(img).to(device)\n",
+    "    img = torch.unsqueeze(img, 0) # We must wrap an additional Tensor around this image\n",
+    "    return img"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11",
+   "metadata": {},
+   "source": [
+    "### Classify shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict(model, image_tensor):\n",
+    "    \"\"\"Predict the class of a given image.\n",
+    "\n",
+    "    Args:\n",
+    "        model (nn.Module): The CNN Network.\n",
+    "        image_tensor (Tensor): The image to predict.\n",
+    "    \n",
+    "    Returns:\n",
+    "        pred_class_name (String): The name of the predicted class for the image\n",
+    "        confidence (float): Model prediction confidence as a scalar (0-1)\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Predict the image's class\n",
+    "    output = model(image_tensor)\n",
+    "    _, pred_class = torch.max(output,1)\n",
+    "    pred_class_name = train_dataset.classes[pred_class]\n",
+    "\n",
+    "    # Get prediction confidence\n",
+    "    output = nn.Softmax(dim=1)(output) # Make all class predictions sum to 1 (softmax)\n",
+    "    confidence = output.squeeze()[ pred_class.squeeze() ].cpu().detach().numpy()\n",
+    "\n",
+    "    return pred_class_name, confidence"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13",
+   "metadata": {},
+   "source": [
+    "### Get bounding box for shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_tensor = load_image(\"../datasets/eval/diamond_21.png\")\n",
+    "\n",
+    "def get_shape_bounding_box(image_tensor):\n",
+    "    \"\"\"\n",
+    "    Given a greyscale image of a shape, get the bounding box for that shape.\n",
+    "\n",
+    "    Args:\n",
+    "        image_tensor (Tensor): The image.\n",
+    "    \n",
+    "    Returns:\n",
+    "        rect (Tuple): The bounding box rectangle (X, Y, width, height).\n",
+    "    \"\"\"\n",
+    "    image_tensor = image_tensor.squeeze()\n",
+    "\n",
+    "    # Start of the bounding box (X, Y) - initialise as bottom-right corner of the image\n",
+    "    box_start = [image_tensor.squeeze().shape[0], image_tensor.squeeze().shape[1]]\n",
+    "\n",
+    "    print(box_start)\n",
+    "\n",
+    "    # End of the bounding box (X, Y) - initialise as top-left corner of the image\n",
+    "    box_end = [0,0]\n",
+    "\n",
+    "    # For each horizontal row in the image:\n",
+    "    for Y, row in enumerate(image_tensor):\n",
+    "\n",
+    "        # Get the X positions of all black pixels.\n",
+    "        # SOURCE: https://stackoverflow.com/questions/47863001/how-pytorch-tensor-get-the-index-of-specific-value\n",
+    "        black_pixel_X_positions = (row<0).nonzero().cpu().numpy().squeeze(1)\n",
+    "\n",
+    "        # If the row has any black pixels:\n",
+    "        if black_pixel_X_positions.size > 0:\n",
+    "            # Update the co-ordinates of the bounding box to match.\n",
+    "\n",
+    "            # Top-left corner of the box:\n",
+    "            box_start[1] = min(box_start[1], Y)\n",
+    "            box_start[0] = min(box_start[0], int(black_pixel_X_positions[0]))\n",
+    "\n",
+    "            # Bottom-right corner of the box:\n",
+    "            box_end[1] = max(box_end[1], Y)\n",
+    "            box_end[0] = max(box_end[0], int(black_pixel_X_positions[-1]))\n",
+    "    \n",
+    "    height, width = box_end[0] - box_start[0], box_end[1] - box_start[1]\n",
+    "    rect = (*box_start, height, width)\n",
+    "\n",
+    "    return rect\n",
+    "\n",
+    "get_shape_bounding_box(image_tensor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(*(np.array(start) + [10,10]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from matplotlib import pyplot as plt\n",
+    "from matplotlib.patches import Rectangle, Ellipse, Polygon\n",
+    "\n",
+    "def display_prediction(image_tensor, bounding_box, predicted_shape, confidence):\n",
+    "    img_preview = image_tensor.cpu().numpy().squeeze()\n",
+    "\n",
+    "    # Display the image\n",
+    "    plt.imshow(img_preview, cmap='grey')\n",
+    "\n",
+    "    # Get the bounding box for the predicted shape\n",
+    "    rect = bounding_box\n",
+    "    start = [rect[0], rect[1]]\n",
+    "    width, height = rect[2], rect[3]\n",
+    "\n",
+    "    # Draw the predicted shape\n",
+    "\n",
+    "    ax = plt.gca()\n",
+    "\n",
+    "    match predicted_shape:\n",
+    "        case \"rectangle\":\n",
+    "            # https://stackoverflow.com/questions/37435369/how-to-draw-a-rectangle-on-image\n",
+    "            shape = Rectangle( start, width, height, linewidth = 2, edgecolor = 'r', facecolor = 'none')\n",
+    "        \n",
+    "        case \"circle\":\n",
+    "            # https://matplotlib.org/3.1.1/api/_as_gen/matplotlib.patches.Ellipse.html\n",
+    "            shape = Ellipse( [start[0] + width * 0.5, start[1] + height * 0.5], width, height, linewidth = 2, edgecolor = 'r', facecolor = 'none')\n",
+    "            \n",
+    "        case \"triangle\":\n",
+    "            points = [\n",
+    "                [int(start[0] + width * 0.5), start[1]],\n",
+    "                [start[0], start[1] + height],\n",
+    "                [start[0] + width, start[1] + height]\n",
+    "            ]\n",
+    "\n",
+    "            shape = Polygon(points, linewidth = 2, edgecolor = 'r', facecolor = 'none')\n",
+    "            \n",
+    "        case \"diamond\":\n",
+    "            points = [\n",
+    "                [int(start[0] + width * 0.5), start[1]],\n",
+    "                [start[0], int(start[1] + height * 0.5)],\n",
+    "                [int(start[0] + width * 0.5), start[1] + height],\n",
+    "                [start[0] + width, int(start[1] + height * 0.5)]\n",
+    "            ]\n",
+    "\n",
+    "            shape = Polygon(points, linewidth = 2, edgecolor = 'r', facecolor = 'none')\n",
+    "\n",
+    "    ax.add_patch(shape)\n",
+    "\n",
+    "    plt.text(*(np.array(start) + [-5,-6]), predicted_shape.title(), color='r', fontsize=12)\n",
+    "    plt.text(*(np.array(start) + [-5,-2]), f\"Confidence: {(confidence * 100):.0f}%\".title(), color='r', fontsize=12)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,13 +416,32 @@
     "    \"\"\"Pass the image to the model and overlay the predicted shape and confidence on the input\n",
     "    image and display it\n",
     "    \"\"\"\n",
-    "    pass"
+    "    \n",
+    "    image_tensor = load_image(image)\n",
+    "\n",
+    "    # Predict the shape first\n",
+    "    pred_class_name, confidence = predict(model,image_tensor)\n",
+    "\n",
+    "    bounding_box = get_shape_bounding_box(image_tensor)\n",
+    "\n",
+    "    display_prediction(image_tensor, bounding_box, pred_class_name, confidence)\n",
+    "    \n",
+    "    \n",
+    "show_prediction(model, \"../datasets/test/diamond_21.png\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "AI",
    "language": "python",
    "name": "python3"
   },
@@ -190,7 +455,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
