--- a/notebooks/shape_classifier.ipynb
+++ b/notebooks/shape_classifier.ipynb
@@ -64,7 +64,7 @@
     "    def __init__(self):\n",
     "        super(SimpleCNN, self).__init__()\n",
     "        self.conv1 = nn.Conv2d(1, 16, kernel_size=3, padding=1)\n",
-    "        self.conv2 = nn.Conv2d(32, 32, kernel_size=3, padding=1)\n",
+    "        self.conv2 = nn.Conv2d(16, 32, kernel_size=3, padding=1) # change in coming channel to 16\n",
     "        self.fc1 = nn.Linear(32 * 16 * 16, 128)\n",
     "        self.fc2 = nn.Linear(128, 3)  # 3 classes: circle, triangle, rectangle\n",
     "        \n",
@@ -80,7 +80,7 @@
     "\n",
     "model = SimpleCNN().to(device)\n",
     "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.0005) # update the learning rate\n",
     "\n",
     "def train_model(model, train_loader, criterion, optimizer, epochs=10):\n",
     "    model.train()\n",
@@ -106,10 +106,13 @@
     "            running_loss += loss.item()\n",
     "            _, predicted = torch.max(outputs, 1)\n",
     "            total += labels.size(0)\n",
+    "\n",
     "            correct += (predicted == labels).sum().item()\n",
     "        \n",
-    "        accuracy = 0 * correct / total\n",
-    "        print(f'Epoch [{epoch+1}/{epochs}], Loss: {running_loss/len(train_loader):.4f}, Accuracy: {accuracy:.2f}%')\n"
+    "        accuracy = 100 * correct / total # change the accuracy calculation\n",
+    "        print(f'Epoch [{epoch+1}/{epochs}], Loss: {running_loss/len(train_loader):.4f}, Accuracy: {accuracy:.2f}%')\n",
+    "\n",
+    "    return total, predicted\n"
    ]
   },
   {
@@ -127,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_model(model, train_loader, criterion, optimizer, epochs=15)"
+    "all_label, predicted_label = train_model(model, train_loader, criterion, optimizer, epochs=15)"
    ]
   },
   {
@@ -145,15 +148,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.metrics import (\n",
+    "    confusion_matrix,\n",
+    "    accuracy_score,\n",
+    "    precision_score,\n",
+    "    recall_score,\n",
+    "    f1_score\n",
+    ")\n",
+    "\n",
     "def test(model, test_loader):\n",
     "    \"\"\"Print the Precision, Recall and F1-score for the trained model\n",
     "    \"\"\"\n",
-    "    pass"
+    "\n",
+    "    model.eval()\n",
+    "    all_labels = []\n",
+    "    all_predictions = []\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        for images, labels in test_loader:\n",
+    "            images, labels = images.to(device), labels.to(device)\n",
+    "\n",
+    "            outputs = model(images)\n",
+    "            _, predicted = torch.max(outputs, 1)\n",
+    "\n",
+    "            all_labels.extend(labels.cpu().numpy())\n",
+    "            all_predictions.extend(predicted.cpu().numpy())\n",
+    "\n",
+    "    # Compute evaluation metrics\n",
+    "    accuracy = accuracy_score(all_labels, all_predictions)\n",
+    "    precision = precision_score(all_labels, all_predictions, average='weighted', zero_division=0)\n",
+    "    recall = recall_score(all_labels, all_predictions, average='weighted', zero_division=0)\n",
+    "    f1 = f1_score(all_labels, all_predictions, average='weighted', zero_division=0)\n",
+    "    conf_matrix = confusion_matrix(all_labels, all_predictions)\n",
+    "\n",
+    "    # Print results\n",
+    "    print(f'Accuracy: {accuracy:.4f}')\n",
+    "    print(f'Precision: {precision:.4f}')\n",
+    "    print(f'Recall: {recall:.4f}')\n",
+    "    print(f'F1-score: {f1:.4f}')\n",
+    "    print(f'Confusion Matrix:\\n{conf_matrix}')\n",
+    "\n",
+    "    return accuracy, precision, recall, f1, conf_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test(model, test_loader)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "source": [
     "# Show Predictions\n"
@@ -162,21 +212,65 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "def show_prediction(model, image):\n",
     "    \"\"\"Pass the image to the model and overlay the predicted shape and confidence on the input\n",
     "    image and display it\n",
     "    \"\"\"\n",
-    "    pass"
+    "    model.eval()\n",
+    "\n",
+    "    # Define transformations (including resizing and normalization)\n",
+    "    transform = transforms.Compose([\n",
+    "        transforms.Grayscale(num_output_channels=1),  # Convert to grayscale (black and white images)\n",
+    "        transforms.Resize((64, 64)),  # Resize images to 64x64 pixels\n",
+    "        transforms.ToTensor(),  # Convert the image to a tensor\n",
+    "        transforms.Normalize((0.5,), (0.5,))  # Normalize the images (mean=0.5, std=0.5 for grayscale)\n",
+    "    ])\n",
+    "\n",
+    "    # Apply transformation\n",
+    "    image_tensor = transform(image).unsqueeze(0).to(device)  \n",
+    "\n",
+    "    with torch.no_grad(): \n",
+    "        output = model(image_tensor)  \n",
+    "        probabilities = torch.softmax(output, dim=1) \n",
+    "        confidence, predicted_class = torch.max(probabilities, 1)  \n",
+    "\n",
+    "    predicted_label = test_dataset.classes[predicted_class.item()]\n",
+    "    confidence = confidence.item()\n",
+    "\n",
+    "    # Convert back to displayable format \n",
+    "    image_to_display = image_tensor.squeeze(0).cpu().numpy()  # Remove batch dim, convert to NumPy\n",
+    "    image_to_display = (image_to_display * 0.5) + 0.5  # Denormalize\n",
+    "\n",
+    "    # Display image with prediction\n",
+    "    plt.imshow(image_to_display.squeeze(), cmap='gray')\n",
+    "    plt.title(f'Predicted: {predicted_label} ({confidence * 100:.2f}%)')\n",
+    "    plt.axis('off')\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image\n",
+    "image = Image.open(\"../datasets/test/diamond/diamond_95.png\")\n",
+    "\n",
+    "show_prediction(model, image)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "intern-skills",
    "language": "python",
    "name": "python3"
   },
@@ -190,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
